# sudoku-irl

./: .gitignore  CMakeLists.txt  README.md  benchmark.dockerfile  docker-compose.yml  sudoku  svm.xml  test.dockerfile
src/: CMakeLists.txt  constants.h  digit_classifier.cpp  digit_classifier.h  digit_recognizer.cpp  digit_recognizer.h  hog_processing.cpp  hog_processing.h  image_processing.cpp  image_processing.h  main.cpp  perspective_transformer.cpp  perspective_transformer.h  pre_process.cpp  pre_process.h  train_digits.cpp
src/model/: Dockerfile  a.out  docker-compose.yml  test.sh
src/model/solver/: sudoku-solver.h
src/model/solver.benchmark/: Dockerfile
src/model/solver.tests/: a.out  test.cpp  test.sh
src/solver/: sudoku-board.cpp  sudoku-board.h  sudoku-solver.cpp
src/solver/benchmark/: benchmark.cpp
src/solver/test/: test.cpp  test.out  test.sh
